# note

./: README.md
bms/: .clang-format  .jenkins  Kconfig  Makefile  README.md  firmware.mk  rtl_fast_build.sh
bms/arch/: Kconfig  Makefile
bms/arch/arm/: Kconfig  Makefile
bms/arch/riscv/: Kconfig  Makefile
bms/configs/c920/: c920_asic_ddr_defconfig  c920_asic_iram_defconfig  c920_fpga_rom_defconfig  c920_fpga_soc_defconfig  c920_rtl_ddr_media_defconfig  c920_rtl_ddr_mini_soc_defconfig  c920_rtl_ddr_soc_defconfig  c920_rtl_iram_mini_soc_defconfig  c920_rtl_iram_soc_defconfig
bms/configs/cskysim/: cskysim_c906_defconfig  cskysim_c920_defconfig  cskysim_e902_defconfig  cskysim_e906_defconfig
bms/configs/e906/: e906_asic_ddr_defconfig  e906_asic_iram_defconfig  e906_asic_orom_defconfig  e906_fpga_rom_defconfig  e906_fpga_soc_defconfig  e906_rtl_ddr_mini_soc_defconfig  e906_rtl_ddr_soc_defconfig  e906_rtl_iram_mini_soc_defconfig  e906_rtl_iram_soc_defconfig  e906_rtl_orom_defconfig  (+1 more)
bms/doc/: itcs_cache_mmu_note_v1.0.md  itcs_cae_note_v1.0.md  itcs_dma_note_v1.0.md  itcs_drd_note_v1.0.md  itcs_eeprom_note_v1.0.md  itcs_eth_note_v1.0.md  itcs_i2c_note_v1.0.md  itcs_i2s_note_v1.0.md  itcs_irq_note_v1.0.md  itcs_mu_note_v1.0.md  itcs_pvt_note_v1.0.md  itcs_pwm_note_v1.0.md  itcs_rtc_note_v1.0.md  itcs_sdmmc_note_v1.0.md  itcs_spi_flash_note_v1.0.md  itcs_spi_note_v1.0.md  itcs_sysm_note_v1.0.md  itcs_timer_note_v1.0.md  itcs_uart_note_v1.0.md  itcs_wdt_note_v1.0.md
bms/drivers/: Kconfig  Makefile
bms/include/: arm-gic.h  assert.h  cache.h  cae.h  cci.h  cdbg.h  cdns_uart.h  ch9.h  clock.h  command.h  common.h  config.h  config_cmd_default.h  crc.h  crc32.h  crypto.h  crypto_module.h  div64.h  dma-ops.h  dmic.h  dmic_pcm.h  domain.h  drd.h  dwc_uart.h  eeprom.h  eth.h  exports.h  ff.h  ffconf.h  fs.h  getopt.h  getopt_int.h  gpio-irq.h  hash.h  hash_module.h  hush.h  hwmon.h  i2c.h  i2s-mc.h  i2s.h  (+54 more)
bms/lib/: Kconfig  Makefile
bms/scripts/: Makefile  build_binary.mk  build_lib.mk  build_makefile.mk  build_subdirs.mk  common.mk  env.mk
bms/testbench/: Kconfig  Makefile
bms/testbench/rxa/randomx/: CMakeLists.txt  randomx-api.c
bms/testbench/rxa/randomx/include/: aes_hash.h  allocator.h  blake2_generator.h  bytecode_machine.h  configuration.h  cpu.h  cvector.h  dataset.h  instruction.h  instruction_weights.h  intrin_portable.h  isa-a64.h  isa-rv64g.h  isa-rxa.h  isa.h  jit_compiler.h  jrx_base.h  jrx_core.h  jrx_dev.h  jrx_rxa.h  jrx_x86.h  jrx_x86_static.h  program.h  randomx.h  reciprocal.h  rxa_common.h  soft_aes.h  stats-utils.h  superscalar.h  superscalar_program.h  uint256.h  utility.h  utils.h  virtual_machine.h  virtual_memory.h  vm_compiled.h  vm_compiled_light.h  vm_interpreted.h  vm_interpreted_light.h
bms/testbench/rxa/randomx/lib/argon2/: argon2.h  argon2_avx2.c  argon2_core.c  argon2_core.h  argon2_ref.c  argon2_ssse3.c
bms/testbench/rxa/randomx/lib/blake2/: blake2-impl.h  blake2.h  blake2b.c  blamka-round-avx2.h  blamka-round-ref.h  blamka-round-ssse3.h  endian.h
bms/testbench/rxa/randomx/lib/utils/: cvector.c  stats-utils.c  uint256.c
bms/testbench/rxa/randomx/src/: aes_hash.c  allocator.c  blake2_generator.c  bytecode_machine.c  cpu.c  dataset.c  instruction.c  instructions_portable.c  intrin_portable.c  program.c  randomx.c  reciprocal.c  soft_aes.c  superscalar.c  virtual_machine.c  virtual_memory.c  vm_compiled.c  vm_compiled_light.c  vm_interpreted.c  vm_interpreted_light.c
bms/testbench/rxa/randomx/src/jrx/: isa_a64.c  isa_rv64g.c  isa_rxa.c  jrx_base.c  jrx_core.c  jrx_dev.c  jrx_none.c  jrx_rxa.c  jrx_x86.c
bms/testbench/rxa/randomx/testbench/: rxbench.c
linux/c/: asm.md  incbin.md
linux/device/: cpu.md  encode.md  gpio.md  i2c.md  i2s.md  linux_power_domain.md  ntp.md  rtc.md  sound.md  venc_app.md  venc_drv.md  wdt.md
linux/gnu_file/: gnu.md  ld.md  linux_debug.md  默认链接脚本.ld
linux/linux_kernel/: device_tree.md  kenel_compile.md  kernel_run_in_fpga.md  ld_script.md  opensbi.md  uboot.md  串口.md  图表1.dia  问题记录.md
linux/run_tools/: qemu.md
linux/shell_cmd/: download.md  fs_cmd.md  io.md  shell.md  vim.md  文本处理.md
tools/: git.md
(+1872 files in other folders)
